--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toshit Kale</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
     <div id="root"></div>
+    <!-- <script src='http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script> -->
+    </script>
 </body>
 </html>
